Quorum/Library/Tests/Actions/Fail/HOCReturnIntFromCalledProcedure.quorum
action Main
    a = B()
end

action B
    return 3
end